--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -1,6 +1,57 @@
 // Enter LESS code here. main.css will be generated automatically.
 
-// Make links in Sinnwerkstatt green.
-a {
-	color: #BCD46E;
+
+.page-header {
+	border-width: 0;
+}
+
+img.image {
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
+aside.sidebar {
+	margin-top: 50px;
+}
+
+article.post {
+	.wp-post-image {
+		width: 100%;
+		display: block;
+		height: auto;
+	}
+}
+
+.widget-richtext {
+	margin-bottom: 30px;
+}
+
+.widget-jumbobox {
+	margin-bottom: 30px;
+}
+
+.widget-blogexcerpt {
+	margin-bottom: 30px;
+
+
+	article {
+		margin-bottom: 30px;
+
+		.widget-blogexcerpt-thumbnail img {
+			width: 100%;
+			display: block;
+			height: auto;
+		}
+	}
+}
+
+.widget-button {
+	margin-bottom: 50px;
+}
+
+.widget-form {
+	input.form-control, textarea.form-control {
+		width: 100%;
+	}
 }
