--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,40 @@
-a {
-  color: #BCD46E;
+.page-header {
+  border-width: 0;
+}
+img.image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+aside.sidebar {
+  margin-top: 50px;
+}
+article.post .wp-post-image {
+  width: 100%;
+  display: block;
+  height: auto;
+}
+.widget-richtext {
+  margin-bottom: 30px;
+}
+.widget-jumbobox {
+  margin-bottom: 30px;
+}
+.widget-blogexcerpt {
+  margin-bottom: 30px;
+}
+.widget-blogexcerpt article {
+  margin-bottom: 30px;
+}
+.widget-blogexcerpt article .widget-blogexcerpt-thumbnail img {
+  width: 100%;
+  display: block;
+  height: auto;
+}
+.widget-button {
+  margin-bottom: 50px;
+}
+.widget-form input.form-control,
+.widget-form textarea.form-control {
+  width: 100%;
 }
