--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name:         Sinnwerkstatt Starter Theme
+Theme Name:         Diabetes Schule Berlin (K Boss)
 Theme URI:          https://roots.io/sage/
-Description:        Sinnwerkstatt Sage is a WordPress starter theme based on Roots Sage.
+Description:        Based on Sinnwerkstatt Sage
 Version:            1.3
 Author:             Thomas Schmidt
 Text Domain:        sage
