--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -42,6 +42,63 @@ header {
 
 .widget-richtext {
 	margin-bottom: 30px;
+
+
+	img.alignnone, img.aligncenter, img.alignright, img.alignleft {
+		width: 100%;
+		height: auto;
+		display: block;
+		margin-bottom: 15px;
+	}
+	@media(min-width:768px) {
+		img.alignright, img.alignleft {
+			width: 50%;
+		}
+		img.alignright {
+			float: right;
+		}
+
+		img.alignleft {
+			float: left;
+		}
+	}
+	@media(min-width:992px) {
+		img.alignright, img.alignleft {
+			width: 33%;
+		}
+	}
+
+	.gallery {
+		margin: 0 -15px 15px -15px;
+
+		figure.gallery-item {
+			float: left;
+			padding: 0 15px 30px 15px;
+		}
+
+
+		&.gallery-columns-1 figure.gallery-item {
+			width: 100%;
+		}
+		&.gallery-columns-2 figure.gallery-item {
+			width: 50%;
+		}
+		&.gallery-columns-3 figure.gallery-item {
+			width: 33.33%;
+		}
+		&.gallery-columns-4 figure.gallery-item {
+			width: 25%;
+		}
+		&.gallery-columns-5 figure.gallery-item {
+			width: 20%;
+		}
+
+		img {
+			width: 100%;
+			height: auto;
+			display: block;
+		}
+	}
 }
 
 .widget-jumbobox {
